[workspace]
resolver = "3"
members = [
    ".main",
    "active-reporting",
    "constrangeiter",
    "ebnftobnf",
    "issuing",
    "locks",
    "stack-array",
    "systemio",
    "systemstd"
]
default-members = [".main"]

[workspace.package]
edition = "2024"
rust-version = "1.99"
homepage = "https://github.com/alejandro-vaz/libutils"
repository = "https://github.com/alejandro-vaz/libutils"
license = "MIT"
authors = ["Alejandro Vaz <alejandro.vaz.myt@gmail.com>"]

[workspace.dependencies]
active-reporting = {version = "1.1", path = "active-reporting"}
constrangeiter = {version = "0.0", path = "constrangeiter"}
ebnftobnf = {version = "2.0", path = "ebnftobnf"}
issuing = {version = "0.6", path = "issuing"}
locks = {version = "1.0", path = "locks"}
stack-array = {version = "0.10", path = "stack-array"}
systemio = {version = "2.1", path = "systemio"}
systemstd = {version = "3.2", path = "systemstd"}

[profile.bench]
lto = "fat"
opt-level = 3
strip = true
debug = false
codegen-units = 1

[profile.release]
opt-level = 3
