[package]
name = "libutils"
version = "5.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["utilities", "utils", "libutils"]
categories = ["development-tools", "config"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A general utility library"

[lib]
path = "./lib.rs"

[dependencies]
bytediff = {workspace = true, optional = true}
cagelock = {workspace = true, optional = true}
constrangeiter = {workspace = true, optional = true}
ebnftobnf = {workspace = true, optional = true}
libutils-console = {workspace = true, optional = true}
libutils-issue = {workspace = true, optional = true}
libutils-report = {workspace = true, optional = true}
libutils-terminal = {workspace = true, optional = true}
stack-array = {workspace = true, optional = true}

[features]
default = ["std"]
no-alloc = [
    "dep:constrangeiter"
]
no-std = [
    "no-alloc",
    "dep:bytediff", 
    "dep:ebnftobnf", 
    "dep:libutils-console", 
    "dep:libutils-issue", 
    "dep:stack-array"
]
std = [
    "no-std", 
    "dep:cagelock", 
    "dep:libutils-report", 
    "dep:libutils-terminal"
]