[package]
name = "libutils"
version = "7.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["utilities", "utils", "libutils"]
categories = ["development-tools", "config"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A general utility library"

[lib]
path = "./lib.rs"

[dependencies]
active-reporting = {workspace = true, optional = true}
bytediff = {workspace = true, optional = true}
cagelock = {workspace = true, optional = true}
constrangeiter = {workspace = true, optional = true}
ebnftobnf = {workspace = true, optional = true}
issuing = {workspace = true, optional = true}
stack-array = {workspace = true, optional = true}
systemio = {workspace = true, optional = true}
systemstd = {workspace = true, optional = true}

[features]
default = ["std"]
no-alloc = [
    "dep:constrangeiter"
]
no-std = [
    "no-alloc",
    "dep:bytediff", 
    "dep:ebnftobnf", 
    "dep:issuing", 
    "dep:stack-array",
    "dep:systemio"
]
std = [
    "no-std", 
    "dep:active-reporting", 
    "dep:cagelock", 
    "dep:systemstd"
]