[package]
name = "libutils"
version = "15.0.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["utilities", "utils", "libutils"]
categories = ["development-tools", "config"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A general utility library"

[lib]
path = "./lib.rs"

[dependencies]
active-reporting = {workspace = true, optional = true}
cachetypes = {workspace = true, optional = true}
constrangeiter = {workspace = true, optional = true}
ebnftobnf = {workspace = true, optional = true}
issuing = {workspace = true, optional = true}
locks = {workspace = true, optional = true}
stack-array = {workspace = true, optional = true}
systemstd = {workspace = true, optional = true}

[features]
default = ["std"]
no-alloc = [
    "dep:constrangeiter",
    "dep:locks"
]
no-std = [
    "no-alloc",
    "dep:active-reporting",
    "dep:cachetypes",
    "dep:ebnftobnf",
    "dep:issuing",
    "dep:stack-array"
]
std = [
    "no-std",
    "dep:systemstd"
]
