[package]
name = "active-reporting"
description = "A custom error wrapper for detailed logs"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
categories = ["caching", "development-tools::debugging", "rust-patterns"]
keywords = ["reporting", "logging", "errors", "issue", "active"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
issuing = {workspace = true}
libutils-console = {workspace = true}
libutils-terminal = {workspace = true}