[package]
name = "active-reporting"
description = "A custom error wrapper for detailed logs"
version = "1.1.3"
edition.workspace = true
rust-version.workspace = true
categories = ["caching", "development-tools::debugging", "rust-patterns", "no-std"]
keywords = ["reporting", "logging", "errors", "issue", "active"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[[bench]]
name = "active-reporting"
harness = false
path = "benches.rs"

[[test]]
name = "active-reporting"
path = "tests.rs"

[dependencies]
issuing = {workspace = true}
systemstd = {workspace = true}

[dev-dependencies]
criterion = "0.8"
