[package]
name = "libutils-array"
description = "A maximum-sized array stored on the stack"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
constrangeiter = {workspace = true}