[package]
name = "libutils-array"
description = "A maximum-sized array stored on the stack"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
categories = ["algorithms", "data-structures", "memory-management", "no-std"]
keywords = ["array", "stack", "stack-array", "collections"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
constrangeiter = {workspace = true}