[package]
name = "bytediff"
description = "A bytearray diff"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
categories = ["algorithms", "compression", "data-structures", "no-std", "text-processing"]
keywords = ["diff", "binary", "bytearray", "bytediff"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]