[package]
name = "cachetypes"
description = "Cache implementations"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
categories = ["data-structures", "memory-management", "algorithms"]
keywords = ["lru", "cache", "caches", "lfu"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
hashbrown = "0.17.1"