[package]
name = "libutils-cage"
description = "A thread-safe static mutable wrapper"
version = "0.0.6"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]