[package]
name = "cagelock"
description = "A thread-safe static mutable wrapper"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
categories = ["data-structures", "concurrency", "memory-management", "rust-patterns"]
keywords = ["cage", "static", "mutable", "static-mutable"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]