[package]
name = "libutils-console"
description = "A simple generalized I/O interface"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
libutils-issue = {workspace = true}