[package]
name = "libutils-constrangeiter"
description = "Constant iterators for ranges"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]