[package]
name = "constrangeiter"
description = "Constant iterators for ranges"
version = "0.0.8"
edition.workspace = true
rust-version.workspace = true
categories = ["algorithms", "data-structures", "no-std::no-alloc", "rust-patterns"]
keywords = ["range", "const", "iter", "iterator"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[[test]]
name = "constrangeiter"
path = "tests.rs"

[dependencies]