[package]
name = "libutils-issue"
description = "A easy-to-use customizable error type"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"
doctest = false

[dependencies]