[package]
name = "libutils"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Common library types for faster development"
publish = true

[lib]
path = "./lib.rs"
doctest = false

[dependencies]
libutils-array = {workspace = true, optional = true}
libutils-cage = {workspace = true, optional = true}
libutils-diff = {workspace = true, optional = true}
libutils-issue = {workspace = true, optional = true}
libutils-log = {workspace = true, optional = true}
libutils-pointer = {workspace = true, optional = true}
libutils-problem = {workspace = true, optional = true}
libutils-report = {workspace = true, optional = true}
libutils-terminal = {workspace = true, optional = true}

[features]
default = ["array", "cage", "diff", "issue", "log", "pointer", "problem", "report", "terminal"]
array = ["dep:libutils-array"]
cage = ["dep:libutils-cage"]
diff = ["dep:libutils-diff"]
issue = ["dep:libutils-issue"]
log = ["dep:libutils-log", "pointer"]
pointer = ["dep:libutils-pointer"]
problem = ["array", "issue", "dep:libutils-problem"]
report = ["array", "issue", "problem", "dep:libutils-report", "terminal"]
terminal = ["cage", "diff", "issue", "log", "problem", "dep:libutils-terminal"]