[package]
name = "locks"
description = "Thread-safe type wrappers"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
categories = ["data-structures", "concurrency", "memory-management", "rust-patterns"]
keywords = ["cage", "static", "mutable", "static-mutable"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[[bench]]
name = "locks"
harness = false
path = "benches.rs"

[[test]]
name = "locks"
path = "tests.rs"

[dependencies]

[dev-dependencies]
criterion = "0.8"