[package]
name = "libutils-log"
description = "A write-only vec-like buffer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"
doctest = false

[dependencies]
libutils-pointer = {workspace = true}