[package]
name = "libutils-problem"
description = "A problem wrapper with additional metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"
doctest = false

[dependencies]
libutils-array = {workspace = true}
libutils-issue = {workspace = true}