[package]
name = "libutils-report"
description = "A custom error wrapper for detailed logs"
version = "0.2.6"
edition.workspace = true
rust-version.workspace = true
categories = ["caching", "development-tools::debugging", "rust-patterns"]
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
libutils-console = {workspace = true}
libutils-issue = {workspace = true}
libutils-terminal = {workspace = true}