[package]
name = "stack-array"
description = "A maximum-sized array stored on the stack"
version = "0.6.2"
edition.workspace = true
rust-version.workspace = true
categories = ["algorithms", "data-structures", "memory-management", "no-std"]
keywords = ["array", "stack", "stack-array", "collections"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[[bench]]
name = "stack-array"
harness = false
path = "benches.rs"

[dependencies]
constrangeiter = {workspace = true}

[dev-dependencies]
criterion = "0.8"