[package]
name = "systemstd"
description = "A custom embedded terminal handler"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
categories = ["accessibility", "command-line-interface", "config", "filesystem", "rust-patterns"]
keywords = ["system", "io", "cli", "errors"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
bytediff = {workspace = true}
cagelock = {workspace = true}
issuing = {workspace = true}
systemio = {workspace = true}