[package]
name = "systemstd"
description = "A custom embedded terminal handler"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
categories = ["accessibility", "command-line-interface", "config", "filesystem", "rust-patterns"]
keywords = ["system", "io", "cli", "errors"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[[bench]]
name = "systemstd"
harness = false
path = "benches.rs"

[[test]]
name = "systemstd"
path = "tests.rs"

[dependencies]
bytediff = {workspace = true}
issuing = {workspace = true}
locks = {workspace = true}
systemio = {workspace = true}

[dev-dependencies]
criterion = "0.8"