[package]
name = "libutils-terminal"
description = "A custom embedded terminal handler"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
libutils-cage = {workspace = true}
libutils-console = {workspace = true}
libutils-diff = {workspace = true}
libutils-issue = {workspace = true}