[package]
name = "libutils-terminal"
description = "A custom embedded terminal handler"
version = "1.0.5"
edition.workspace = true
rust-version.workspace = true
categories = ["accessibility", "command-line-interface", "config", "filesystem", "rust-patterns"]
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"

[dependencies]
bytediff = {workspace = true}
libutils-cage = {workspace = true}
libutils-console = {workspace = true}
libutils-issue = {workspace = true}