[package]
name = "libutils-threat"
description = "An error wrapper with additional metadata"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "./mod.rs"
doctest = false

[dependencies]
libutils-issue = {workspace = true}